--- a/site/training/program/sample-training-plan-2.qmd
+++ b/site/training/program/sample-training-plan-2.qmd
@@ -79,28 +79,28 @@ This training plan outlines the implementation strategy for a multinational orga
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| ValidMind 101 | Live + Labs | 2 hours | Team-based | 50 |
-| Developer fundamentals | Interactive | 4 hours | Role-specific | 50 |
-| Validator fundamentals | Interactive | 4 hours | Role-specific | 50 |
-| Administrator fundamentals | Interactive | 4 hours | Role-specific | 50 |
+| ValidMind 101 | Virtual | 2 hours | Team-based | 50 |
+| Developer foundations | Virtual | 4 hours | Role-specific | 50 |
+| Validator essentials | Virtual | 4 hours | Role-specific | 50 |
+| Admin core skills | Virtual | 4 hours | Role-specific | 50 |
 
 #### Implementation phase (Week 2)
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| Custom workflows | Workshop | 4 hours | Team-based | 50 |
-| Integration practices | Technical | 4 hours | Development teams | 50 |
-| Advanced validation | Workshop | 4 hours | Validation teams | 50 |
-| Governance setup | Technical | 4 hours | Admin teams | 50 |
+| Custom workflows | Virtual | 4 hours | Team-based | 50 |
+| Integration practices | Virtual | 4 hours | Development teams | 50 |
+| Advanced validation | Virtual | 4 hours | Validation teams | 50 |
+| Governance setup | Virtual | 4 hours | Admin teams | 50 |
 
 #### Optimization phase (Week 3)
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| Best practices | Workshop | 4 hours | All teams | 50 |
-| Advanced features | Technical | 4 hours | Role-specific | 50 |
-| Enterprise scale | Strategy | 2 hours | Leadership | 50 |
-| Future roadmap | Planning | 2 hours | Key stakeholders | 50 |
+| Best practices | Virtual | 4 hours | All teams | 50 |
+| Advanced features | Virtual | 4 hours | Role-specific | 50 |
+| Enterprise scale | Virtual | 2 hours | Leadership | 50 |
+| Future roadmap | Virtual | 2 hours | Key stakeholders | 50 |
 
 ### United Kingdom
 
@@ -108,28 +108,28 @@ This training plan outlines the implementation strategy for a multinational orga
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| ValidMind 101 | Live + Labs | 2 hours | Team-based | 100 |
-| Developer foundations | Interactive | 4 hours | Role-specific | 100 |
-| Validator essentials | Interactive | 4 hours | Role-specific | 100 |
-| Admin core skills | Interactive | 4 hours | Role-specific | 100 |
+| ValidMind 101 | Virtual | 2 hours | Team-based | 100 |
+| Developer foundations | Virtual | 4 hours | Role-specific | 100 |
+| Validator essentials | Virtual | 4 hours | Role-specific | 100 |
+| Admin core skills | Virtual | 4 hours | Role-specific | 100 |
 
 #### Implementation phase (Week 2)
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| Custom workflows | Workshop | 4 hours | Team-based | 100 |
-| Integration practices | Technical | 4 hours | Development teams | 100 |
-| Advanced validation | Workshop | 4 hours | Validation teams | 100 |
-| Governance setup | Technical | 4 hours | Admin teams | 100 |
+| Custom workflows | Virtual | 4 hours | Team-based | 100 |
+| Integration practices | Virtual | 4 hours | Development teams | 100 |
+| Advanced validation | Virtual | 4 hours | Validation teams | 100 |
+| Governance setup | Virtual | 4 hours | Admin teams | 100 |
 
 #### Optimization phase (Week 3)
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| Best practices | Workshop | 4 hours | All teams | 100 |
-| Advanced features | Technical | 4 hours | Role-specific | 100 |
-| Enterprise scale | Strategy | 2 hours | Leadership | 100 |
-| Future roadmap | Planning | 2 hours | Key stakeholders | 100 |
+| Best practices | Virtual | 4 hours | All teams | 100 |
+| Advanced features | Virtual | 4 hours | Role-specific | 100 |
+| Enterprise scale | Virtual | 2 hours | Leadership | 100 |
+| Future roadmap | Virtual | 2 hours | Key stakeholders | 100 |
 
 ### India
 
@@ -137,28 +137,28 @@ This training plan outlines the implementation strategy for a multinational orga
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| ValidMind 101 | Live + Labs | 2 hours | Team-based | 50 |
-| Developer foundations | Interactive | 4 hours | Role-specific | 50 |
-| Validator essentials | Interactive | 4 hours | Role-specific | 50 |
-| Admin core skills | Interactive | 4 hours | Role-specific | 50 |
+| ValidMind 101 | Virtual | 2 hours | Team-based | 50 |
+| Developer foundations | Virtual | 4 hours | Role-specific | 50 |
+| Validator essentials | Virtual | 4 hours | Role-specific | 50 |
+| Admin core skills | Virtual | 4 hours | Role-specific | 50 |
 
 #### Implementation phase (Week 2)
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| Custom workflows | Workshop | 4 hours | Team-based | 50 |
-| Integration practices | Technical | 4 hours | Development teams | 50 |
-| Advanced validation | Workshop | 4 hours | Validation teams | 50 |
-| Governance setup | Technical | 4 hours | Admin teams | 50 |
+| Custom workflows | Virtual | 4 hours | Team-based | 50 |
+| Integration practices | Virtual | 4 hours | Development teams | 50 |
+| Advanced validation | Virtual | 4 hours | Validation teams | 50 |
+| Governance setup | Virtual | 4 hours | Admin teams | 50 |
 
 #### Optimization phase (Week 3)
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|----------|-----------|------------------|
-| Best practices | Workshop | 4 hours | All teams | 50 |
-| Advanced features | Technical | 4 hours | Role-specific | 50 |
-| Enterprise scale | Strategy | 2 hours | Leadership | 50 |
-| Future roadmap | Planning | 2 hours | Key stakeholders | 50 |
+| Best practices | Virtual | 4 hours | All teams | 50 |
+| Advanced features | Virtual | 4 hours | Role-specific | 50 |
+| Enterprise scale | Virtual | 2 hours | Leadership | 50 |
+| Future roadmap | Virtual | 2 hours | Key stakeholders | 50 |
 :::
 :::
 
@@ -170,25 +170,25 @@ This training plan outlines the implementation strategy for a multinational orga
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | In-person | 4 hours | Regional | 50 |
-| Implementation | In-person | 4 hours | Regional | 50 |
-| Optimization | In-person | 4 hours | Regional | 50 |
+| Foundation | Virtual | 4 hours | Regional | 50 |
+| Implementation | Virtual | 4 hours | Regional | 50 |
+| Optimization | Virtual | 4 hours | Regional | 50 |
 
 ### United Kingdom
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | In-person | 4 hours | Regional | 100 |
-| Implementation | In-person | 4 hours | Regional | 100 |
-| Optimization | In-person | 4 hours | Regional | 100 |
+| Foundation | Virtual | 4 hours | Regional | 100 |
+| Implementation | Virtual | 4 hours | Regional | 100 |
+| Optimization | Virtual | 4 hours | Regional | 100 |
 
 ### India
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | In-person | 4 hours | Regional | 50 |
-| Implementation | In-person | 4 hours | Regional | 50 |
-| Optimization | In-person | 4 hours | Regional | 50 |
+| Foundation | Virtual | 4 hours | Regional | 50 |
+| Implementation | Virtual | 4 hours | Regional | 50 |
+| Optimization | Virtual | 4 hours | Regional | 50 |
 :::
 :::
 
@@ -200,25 +200,25 @@ This training plan outlines the implementation strategy for a multinational orga
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | In-person | 4 hours | Regional | 50 |
-| Implementation | In-person | 4 hours | Regional | 50 |
-| Optimization | In-person | 4 hours | Regional | 50 |
+| Foundation | Virtual | 4 hours | Regional | 50 |
+| Implementation | Virtual | 4 hours | Regional | 50 |
+| Optimization | Virtual | 4 hours | Regional | 50 |
 
 ### United Kingdom
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | In-person | 4 hours | Regional | 100 |
-| Implementation | In-person | 4 hours | Regional | 100 |
-| Optimization | In-person | 4 hours | Regional | 100 |
+| Foundation | Virtual | 4 hours | Regional | 100 |
+| Implementation | Virtual | 4 hours | Regional | 100 |
+| Optimization | Virtual | 4 hours | Regional | 100 |
 
 ### India
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | In-person | 4 hours | Regional | 50 |
-| Implementation | In-person | 4 hours | Regional | 50 |
-| Optimization | In-person | 4 hours | Regional | 50 |
+| Foundation | Virtual | 4 hours | Regional | 50 |
+| Implementation | Virtual | 4 hours | Regional | 50 |
+| Optimization | Virtual | 4 hours | Regional | 50 |
 :::
 :::
 
