Add more details

--- a/site/training/program/sample-training-plan-2.qmd
+++ b/site/training/program/sample-training-plan-2.qmd
@@ -6,38 +6,24 @@ sidebar: validmind-training
 
 This training plan outlines the implementation strategy for a multinational organization, focusing on regional delivery, role-based training, and ongoing support to ensure successful adoption across all user groups.
 
-## Timeline overview
+## Overview
 
-:::: {.flex .flex-wrap .justify-around}
+ValidMind will provide a comprehensive training program to support user onboarding and maximize adoption. This program uses various methods, including virtual training sessions, access to self-paced interactive training content, and monthly regional office hours facilitated by a dedicated Customer Success team (CS Manager and CS Architect).
 
-::: {.w-30}
-### <sup>Pre-deployment</sup><br>Initial training
+The training schedule encompasses several key phases:
 
-- Platform introduction
-- Role-based fundamentals
-- Interactive training
-- Regional virtual sessions
+ - **Initial enablement** — Prior to the Go-Live Date, ValidMind shall provide introductory training, consisting of virtual sessions (maximum 12 participants per session) for developers, validators, and governance owners, organized by region (US, UK, India). ValidMind shall schedule and deliver instructor-led sessions with 8 to 12 participants per session to ensure all users receive training. Additional sessions may be scheduled at the mutual agreement of the Parties.
+
+- **Ongoing enablement** — Ongoing training will be delivered through monthly regional (US, UK, India) office hours, ensuring continuous learning and updates. These office hours are an open forum for users to ask questions, screen share for assistance, get advice, and learn more about the platform. All users will also receive annual platform enhancement and refresher training.
+
+- **Annual refresher** — All users will receive refresher training that covers platform updates, new features, and workflow changes.
+
+**Specialized GenAI training**: In addition, specific training for GenAI governance owners will be provided to support the rollout of the new governance process. The timeline for this training will be confirmed but will be completed within 6 months of going live. ValidMind will also supply packaged training documentation to be made available to end users and will ensure this documentation is updated in conjunction with the release of any platform updates.
+
+::: {.callout title="Training capacity"}
+- The total number of users trained will be capped at 200 across all regions. 
+- Additional training sessions beyond this cap may be delivered by mutual agreement.
 :::
-
-::: {.w-30}
-### <sup>Pre-release</sup><br>Update training
-
-- New features
-- Process changes
-- Documentation updates
-- Regional virtual sessions
-:::
-
-::: {.w-30}
-### <sup>Ongoing</sup><br>Annual refresher  
-
-- Platform updates
-- Best practices
-- New features
-- Role-specific updates
-:::
-
-::::
 
 ## Regional delivery
 
@@ -46,25 +32,28 @@ This training plan outlines the implementation strategy for a multinational orga
 ::: {.w-33 .pr-2}
 ### United States
 - Virtual sessions
-- Interactive training
+- Hand-on workshops
 - Minimum 4 hours per role
 - EST-based scheduling
+- Capped at 50 participants per session
 ::: 
 
 ::: {.w-33 .pl-2}
 ### United Kingdom
 - Virtual sessions
-- Interactive training
+- Hand-on workshops
 - Minimum 4 hours per role
 - GMT-based scheduling
+- Capped at 100 participants per session
 :::
 
 ::: {.w-33 .pl-2}
 ### India
 - Virtual sessions
-- Interactive training
+- Hand-on workshops
 - Minimum 4 hours per role
 - IST-based scheduling
+- Capped at 50 participants per session
 :::
 
 ::::
@@ -170,25 +159,25 @@ This training plan outlines the implementation strategy for a multinational orga
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | Virtual | 4 hours | Regional | 50 |
-| Implementation | Virtual | 4 hours | Regional | 50 |
-| Optimization | Virtual | 4 hours | Regional | 50 |
+| New features | Virtual | 4 hours | Regional | 50 |
+| Workflow changes | Virtual | 4 hours | Regional | 50 |
+| Documentation & training updates | Virtual | 4 hours | Regional | 50 |
 
 ### United Kingdom
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | Virtual | 4 hours | Regional | 100 |
-| Implementation | Virtual | 4 hours | Regional | 100 |
-| Optimization | Virtual | 4 hours | Regional | 100 |
+| New features | Virtual | 4 hours | Regional | 100 |
+| Workflow changes | Virtual | 4 hours | Regional | 100 |
+| Documentation & training updates | Virtual | 4 hours | Regional | 100 |
 
 ### India
 
 | Module | Format | Duration | Delivery | Max participants |
 |--------|---------|-----------|-----------|------------------|
-| Foundation | Virtual | 4 hours | Regional | 50 |
-| Implementation | Virtual | 4 hours | Regional | 50 |
-| Optimization | Virtual | 4 hours | Regional | 50 |
+| New features | Virtual | 4 hours | Regional | 50 |
+| Workflow changes | Virtual | 4 hours | Regional | 50 |
+| Documentation & training updates | Virtual | 4 hours | Regional | 50 |
 :::
 :::
 
@@ -222,6 +211,7 @@ This training plan outlines the implementation strategy for a multinational orga
 :::
 :::
 
+::: {.attn}
 ## Specialized training
 
 :::: {.flex .flex-wrap .justify-around}
@@ -230,19 +220,20 @@ This training plan outlines the implementation strategy for a multinational orga
 ### Generative AI governance
 - Custom governance process training
 - Implementation support
-- 6-month completion timeline
 - Role-specific workshops
+- 6-month completion timeline, details TBD
 :::
 
 ::: {.w-50 .pl-2}
 ### New user onboarding
-- Training within 1 week of notification
-- Role-based fundamentals
+- Training provided within 1 week of notification
 - Platform introduction
-- Hands-on exercises
+- Role-based fundamentals
+- See [initial onboarding](#initial-onboarding) 
 :::
 
 ::::
+:::
 
 ## Documentation & support
 
