--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -444,13 +444,11 @@ PR #1245: Fix scrolling in documentation table of contents
 URL: https://github.com/validmind/frontend/pull/1245
 Labels: bug
 --->
-#### Fix scrolling in documentation table of contents
+#### Improved table of contents navigation for model documentation
 
-https://github.com/user-attachments/assets/5edee12d-0905-4abf-b88a-671e7a7d345c
- 
-Generated PR summary: 
- 
-The layout of the DocumentationPage component has been improved to enhance functionality and user experience. The sidebar is now fixed with a set width, maintaining consistency and visibility across the application. This change involves making the sidebar span from top to bottom of the viewport and adding a right border with a color that adjusts based on the active color mode for better visual separation. The sidebar remains scrollable while staying in place, ensuring ease of navigation. Additionally, the main content area’s left margin has been adjusted to prevent overlay or layout issues caused by the fixed sidebar. These updates provide a more stable and user-friendly layout, particularly benefiting navigation on larger screens.
+Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages, such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
+
+Now, users can scroll to reveal previously hidden table of contents headings via a fixed navigation sidebar.
 
 <!---
 PR #1250: Not able to see long output on the UI
