--- a/site/releases/2025/2025-apr-08/release-notes.qmd
+++ b/site/releases/2025/2025-apr-08/release-notes.qmd
@@ -30,7 +30,7 @@ listing:
       description: "tagline UPDATE"
 ---
 
-DON'T FORGET THE SUMMARY
+DON'T FORGET THE SUMMARY!
 
 ::: {.highlights}
 
@@ -244,6 +244,11 @@ We've introduced the ability to define custom model stakeholder types, allowing 
 - Model stakeholders determine specific responsibilities and access levels for model review and approval processes for each model in your model inventory, such as read or edit access to model inventory fields.
 - Each model stakeholder also belongs to user groups* which determine which models they can see, and have user roles* with attached role permissions* which define the level of access they have to overarching {{< var validmind.platform >}} features.
 
+::: {.callout}
+Model stakeholders are now also available as a field defined in conditional arguments within model workflow steps*.
+
+:::
+
 ### Documentation
 
 <!---
@@ -411,16 +416,14 @@ The error handling is improved with the introduction of the new `InvalidParamete
 Test updates accompany these changes as well, specifically altering the `test_log_test_result` case to incorporate the new configuration parameter and ensure thorough testing of logging functionality with these improvements. These enhancements offer greater flexibility in how test results are logged and displayed while strengthening error management and overall code clarity.
 
 
-### {{< var validmind.platform >}} (v1.31.10)
-
-MIGHT NOT NEED THE BELOW
+<!-- COVERED BY MODEL STAKEHOLDER RELEASE ABOVE  -->
 
 <!---
 PR #1278: Update stakeholder role mapping in workflows builder and filtering logic
 URL: https://github.com/validmind/frontend/pull/1278
 Labels: 
 --->
-#### Update stakeholder role mapping in workflows builder and filtering logic
+<!-- #### Update stakeholder role mapping in workflows builder and filtering logic
 
 Replace this comment with your description
  
@@ -432,7 +435,7 @@ The ApprovalPanel component's query builder is enhanced to use FIELD_IDENTIFIERS
 
 The ApprovalNode component updates conditions to check against FIELD_IDENTIFIERS, which clarifies references to user roles, stakeholder roles, and custom fields. The humanizeJsonLogic utility's outputs now consistently align with updated constants based on role assignments.
 
-Finally, in the useQueryBuilder hook, FIELD_IDENTIFIERS are exported for consistent usage across components, with query fields adjusted to reflect new role identifier mappings. These changes enhance code maintainability by reducing hardcoded values and ensuring consistency in role-based operations across the system.
+Finally, in the useQueryBuilder hook, FIELD_IDENTIFIERS are exported for consistent usage across components, with query fields adjusted to reflect new role identifier mappings. These changes enhance code maintainability by reducing hardcoded values and ensuring consistency in role-based operations across the system. -->
 
 
 ## Bug fixes
@@ -446,7 +449,7 @@ Labels: bug
 --->
 #### Improved table of contents navigation for model documentation
 
-Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages, such as being unable to scroll to reveal additional headings when the sections of the Document Outline exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
+Previously, users experienced non-optimal behavior with the table of contents sidebar for their model's **{{< fa book-open >}} Documentation** pages, such as being unable to scroll to reveal additional headings when the sections of the Document Outline* exceeded the length of the visible page, and navigation that auto-collapsed counterintuitively.
 
 Now, users can scroll to reveal previously hidden table of contents headings via a fixed navigation sidebar.
 
@@ -455,17 +458,12 @@ PR #1250: Not able to see long output on the UI
 URL: https://github.com/validmind/frontend/pull/1250
 Labels: bug
 --->
-#### Not able to see long output on the UI
+#### Fixed data table navigation in large test-driven blocks
 
-Fixed an issue
+Previously, when test results logged to the {{< var validmind.platform >}} contained more than 20 pages of data in a table were inserted as test-driven blocks into documentation, the previous and next buttons did not render correctly for pagination.
 
-Tables with more than 20 pages were not rendering `Previous`/`Next` buttons correctly.
+Now, test results logged and inserted as test-driven blocks* into the documentation display pagination navigation buttons correctly regardless of the size of the data table.
 
-https://github.com/user-attachments/assets/abc23cbd-21ae-4f81-b42a-610bf88fc5e8
- 
-Generated PR summary: 
- 
-The DataTable component's pagination functionality now includes a dynamic system that enhances usability and scalability, particularly when managing a large number of pages. The pagination always displays the first and last pages, with dynamically calculated visible page buttons based on your current page and a set maximum visible limit. To maintain a clean interface when there are many pages, the component uses ellipsis menus to represent skipped page numbers, utilizing Chakra UI's Menu components. This improved navigation ensures you have a clear pathway to access any page directly through visible buttons or via dropdown menus listing hidden pages.
 
 <!-- Customer-managed ValidMind -->
 
